# funcproxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: plugin.md
src/funcproxy/: cli.py
src/funcproxy/core/: lib.py  plugin.py  plugin_base.py  server.py
src/funcproxy/core/static/: lib.js  style.css
src/funcproxy/core/templates/: extension-detail.html  extensions.html  settings.html
src/funcproxy/plugins/notepad/: __init__.py  info.json
src/funcproxy/plugins/runenv/: __init__.py  info.json
src/funcproxy/plugins/smtplib/: __init__.py  info.json  setting.json
src/funcproxy/plugins/time/: __init__.py  info.json
src/funcproxy/plugins/web_search/: __init__.py  info.json  setting.json
