[project]
name = "funcproxy"
version = "0.0.1"
authors = [
  { name="hy", email="ttgml@outlook.com" },
]
description = "funcproxy is a tool for function proxy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "flask==3.1.0",
  "Flask-Cors == 5.0.0"
  "gevent == 24.11.1"
  "requests == 2.32.3"
]

[project.scripts]
funcproxy = "funcproxy.cli:main"

[project.urls]
Homepage = "https://github.com/ttgml/funcproxy"
Issues = "https://github.com/ttgml/funcproxy/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"funcproxy.core" = ["templates/*.html", "static/*", "plugins/*]